# SODP

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SPECIFICATION.md  build.rs  cliff.toml  docker-compose.yml
.github/workflows/: ci.yml  integration.yml  release-demo.yml  release-go.yml  release-java.yml  release-py.yml  release-server.yml  release-ts.yml
benches/: codec.rs  delta.rs  state.rs
client-ts/: README.md  explore.mjs  integration.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
client-ts/src/: delta.test.ts  delta.ts  index.ts
config/: acl.json.example  schema.json.example
demo-collab/: Dockerfile  backend.py  requirements.txt
demo-collab/static/: index.html
docs/: architecture.md  clustering.md  deployment.md  guide.md  protocol.md  tutorial.md
docs/iana/: README.md  uri-review-email.md  uri-scheme-registration.md
proto/: bench.proto
react-sodp/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
react-sodp/src/: context.tsx  hooks.test.tsx  hooks.ts  index.ts
server-ts/: jest.config.js  package-lock.json  package.json  tsconfig.json
server-ts/bench/: bench.ts
server-ts/src/: acl.ts  cluster.ts  frame.ts  index.ts  jsonpointer.ts  jwt.ts  persist.ts  protocol.test.ts  rpc.ts  schema.ts  server.test.ts  server.ts  session.ts  store.ts
sodp-go/: README.md  acl.go  cluster.go  delta.go  fanout.go  frame.go  go.mod  go.sum  metrics.go  persist.go  server.go  session.go  sodp_test.go  state.go  writepool.go
sodp-go/cmd/bench/: main.go
sodp-go/cmd/loadtest/: main.go
sodp-go/cmd/smoke/: main.go
sodp-go/cmd/sodp-server/: main.go
sodp-go/sodpmetrics/: go.mod  metrics.go
sodp-go/sodpredis/: cluster.go  go.mod  go.sum
sodp-java/: README.md  pom.xml
sodp-java/src/main/java/io/sodp/client/: SodpClient.java  SodpException.java  StateRef.java  WatchCallback.java  WatchMeta.java  WatchSource.java
sodp-java/src/main/java/io/sodp/client/delta/: DeltaApplier.java  DeltaOp.java
sodp-java/src/main/java/io/sodp/client/internal/: CallbackEntry.java  FrameTypes.java  Frames.java  WatchEntry.java
sodp-java/src/main/java/site/orkestri/sodp/: SodpClient.java  SodpException.java  StateRef.java  WatchCallback.java  WatchMeta.java  WatchSource.java
sodp-java/src/main/java/site/orkestri/sodp/delta/: DeltaApplier.java  DeltaOp.java
sodp-java/src/main/java/site/orkestri/sodp/internal/: CallbackEntry.java  FrameTypes.java  Frames.java  WatchEntry.java
sodp-java/src/test/java/io/sodp/client/: DeltaApplierTest.java  FramesTest.java  SodpExceptionTest.java  WatchMetaTest.java
sodp-java/src/test/java/site/orkestri/sodp/: DeltaApplierTest.java  FramesTest.java  SodpExceptionTest.java  WatchMetaTest.java
sodp-mcp/: README.md  pyproject.toml
sodp-mcp/src/sodp_mcp/: server.py
sodp-middleware/: Cargo.toml
sodp-middleware/src/: acl.rs  lib.rs  rate.rs
sodp-py/: README.md  integration.py  pyproject.toml
sodp-py/src/sodp/: __init__.py  client.py  delta.py
sodp-py/tests/: test_client.py  test_delta.py
src/: acl.rs  cluster.rs  delta.rs  fanout.rs  frame.rs  lib.rs  log.rs  main.rs  schema.rs  server.rs  session.rs  state.rs  write_pool.rs
