[workspace]
members  = [".", "sodp-middleware"]
resolver = "2"

[package]
name = "SODP"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "sodp-server"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[lib]
name = "sodp"
path = "src/lib.rs"

[dependencies]
# async runtime + networking
tokio         = { version = "1", features = ["full"] }
tokio-stream  = "0.1"
futures-util  = "0.3"

# WebSocket transport (SODP)
tokio-tungstenite = "0.24"

# REST server
axum = { version = "0.7", features = ["json"] }

# gRPC server + client
tonic  = { version = "0.12", features = ["transport"] }
prost  = "0.13"

# HTTP client (REST benchmark)
reqwest = { version = "0.12", features = ["stream", "json"] }

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde  = "1"

# Authentication
jsonwebtoken = "9"

# Concurrency primitives
dashmap = "6"
uuid    = { version = "1", features = ["v4"] }

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics                     = "0.23"
metrics-exporter-prometheus = "0.15"

# Error handling
anyhow = "1"

# Allocator — replaces glibc malloc; reduces P99 spikes from heap fragmentation
tikv-jemallocator = "0.6"

# Cancellation tokens for graceful shutdown
tokio-util = "0.7"

# Redis — optional horizontal scaling (cross-node state + fanout)
redis = { version = "0.27", features = ["aio", "tokio-comp"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
debug = 1       # line-number info for flamegraphs; strip = false is the default

[build-dependencies]
tonic-build          = "0.12"
protoc-bin-vendored  = "3"
