[workspace]
members  = [".", "sodp-middleware"]
resolver = "2"

[package]
name = "SODP"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "sodp-server"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
required-features = ["bench"]

[[bin]]
name = "load-test"
path = "src/bin/load_test.rs"

[lib]
name = "sodp"
path = "src/lib.rs"

[features]
bench = ["dep:axum", "dep:tonic", "dep:prost", "dep:reqwest", "dep:tonic-build", "dep:protoc-bin-vendored"]

[dependencies]
# async runtime + networking
tokio         = { version = "1", features = ["full"] }
tokio-stream  = "0.1"
futures-util  = "0.3"

# WebSocket transport (SODP)
tokio-tungstenite = "0.24"

# REST server (bench only)
axum = { version = "0.7", features = ["json"], optional = true }

# gRPC server + client (bench only)
tonic  = { version = "0.12", features = ["transport"], optional = true }
prost  = { version = "0.13", optional = true }

# HTTP client (bench only)
reqwest = { version = "0.12", features = ["stream", "json"], optional = true }

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde  = "1"

# Authentication
jsonwebtoken = "10"

# Concurrency primitives
dashmap = "6"
uuid    = { version = "1", features = ["v4"] }

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics                     = "0.23"
metrics-exporter-prometheus = "0.15"

# Error handling
anyhow = "1"

# Allocator — replaces glibc malloc; reduces P99 spikes from heap fragmentation
tikv-jemallocator = "0.6"

# Cancellation tokens for graceful shutdown
tokio-util = "0.7"

# Redis — optional horizontal scaling (cross-node state + fanout)
redis = { version = "0.27", features = ["aio", "tokio-comp"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "delta"
harness = false

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "state"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false

[profile.profiling]
inherits = "release"
debug = 1
strip = false

[build-dependencies]
tonic-build          = { version = "0.12", optional = true }
protoc-bin-vendored  = { version = "3", optional = true }
