[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sodp-mcp"
version = "0.1.0"
description = "MCP server exposing SODP state operations as AI agent tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp[cli]>=1.0.0",
    "sodp>=0.2.1",
]

[project.scripts]
sodp-mcp = "sodp_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sodp_mcp"]
