[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sodp"
version = "0.1.0"
description = "Python client for the State-Oriented Data Protocol"
license = { text = "MIT" }
authors = [{ name = "Orkestri", email = "hello@orkestri.io" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12",
    "msgpack>=1.0",
]

[project.urls]
Homepage = "https://github.com/orkestri/SODP"
Repository = "https://github.com/orkestri/SODP"
"Bug Tracker" = "https://github.com/orkestri/SODP/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sodp"]
